--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,20 +1,31 @@
+html {
+    font-size: 10px !important;
+}
 html, body, .app {
     height: 100vh;
-    /* font-size: 10px; */
     padding: 1em;
     background:  #eee;
 }
 .messages {
-    height: 16em;
+    position: fixed !important;
+    right: 29em;
+    left: 26em;
+    height: 33em;
+    top: 7em;
     overflow-y: scroll;
+}
+.messages__header{
+    position: fixed !important;
+    right: 29em;
+    left: 26em;
 }
 .message__form {
     position: fixed !important;
     padding: 2px;
     bottom: .5em;
-    margin-left: 24em !important;
-    left: 0;
-    right: 20.5em;
+    /* margin-left:  !important; */
+    left: 26em;
+    right: 29em;
     z-index: 200;
 }
 .message__self {
@@ -23,4 +34,7 @@ html, body, .app {
 }
 .message__image {
     padding: 1em;
+}
+.menu {
+    padding-bottom: 1.2em;
 }
